@@ -2359,6 +2359,7 @@ JaeSung Lee <berise at gmail dot com>
 Chong Wuk Pak <chong dot pak at lmco dot com>
 Michael Frommberger <michael dot frommberger at gmx dot net>
 Andrey Karpov <karpov at viva64 dot com>
+Dmytro Ovdiienko <dmitriy dot ovdienko at gmail.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
